--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- Titre de la page -->
     <title>Siyar Ozan Kulug | CV</title>
     <!-- Auteur -->
-    <meta name="author" content="Laure Dinateur">
+    <meta name="author" content="Siyar Ozan Külüg">
     <!-- Description de la page -->
-    <meta name="description" content="Brève description du contenu de la page.">
+    <meta name="description" content="Le CV de Siyar Ozan Külüg etudiant en EMT">
     <!-- Reset CSS Normalize CSS -->
     <link rel="stylesheet" href="css/normalize.css"/>
     <!-- CSS de base -->
@@ -42,11 +42,21 @@
     </nav>
   </header>    
   <main>
-    <h1>Titre principal de la page</h1>
-    <p>Un paragraphe pas trop long à lire</p>
+    <h1>Siyar Ozan Külüg</h1>
+    <p>un etudiant en informatique</p>
+
+      <h2> Mes expériences professionnelles</h2>
+      <ul>
+          <li>Rien</li>
+      </ul>
+
+      <ul>Mes compétences
+      <li>C++</li>
+      </ul>
+      
   </main>
   <footer>
-    &copy;2021 Laure Dinateur
+    &copy;2025 Siyar Ozan Külüg
   </footer>
 </body>
 </html>
