--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
           <li>Rien</li>
       </ul>
 
-      <ul>Mes compétences
+      <h2>Mes compétences</h2>
+      <ul>
       <li>C++</li>
       </ul>
       
