modifier les liens et id

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <nav>
         <ul class="menu">
             <li>
-                <a href="#">Lien #1</a>
+                <a href="#experiences">Mon expérience</a>
             </li>
              <li>
-                <a href="#">Lien #2</a>
+                <a href="#competences">Mes compétences</a>
             </li>
              <li>
-                <a href="#">Lien #3</a>
+                <a href="#formation">Ma formation</a>
             </li>
         </ul>
     </nav>
@@ -45,16 +45,22 @@
     <h1>Siyar Ozan Külüg</h1>
     <p>un etudiant en informatique</p>
 
-      <h2> Mes expériences professionnelles</h2>
-      <ul>
-          <li>Rien</li>
-      </ul>
+      <h2 id="experiences"> Mes expériences</h2>
+          <ul>
+              <li>18 ans d’expérience en informatique</li>
+              <li>/li>
+          </ul>
 
-      <h2>Mes compétences</h2>
-      <ul>
-      <li>C++</li>
-      </ul>
-      
+      <h2 id="competences">Mes compétences</h2>
+          <ul>
+              <li>C++</li>
+              <li>Expert en <strong>HTML</strong></li>
+          </ul>
+
+      <h2 id="formation">Ma formation</h2>
+          <ul>
+              <li>Scolarité obligatoire achevée en 2020</li>
+          </ul>
   </main>
   <footer>
     &copy;2025 Siyar Ozan Külüg
