finir Mes ecperiences

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <h2 id="experiences"> Mes expériences</h2>
           <ul>
               <li>18 ans d’expérience en informatique</li>
-              <li>/li>
+              <li>Travaillé avec <em><strong>Elon Bezos</strong></em></li>
+              <li>Travaillé chez Rockstar sur GTA 6 pendant environ 11 ans </li>
           </ul>
 
       <h2 id="competences">Mes compétences</h2>
