fixer footer et orthographe

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <header>
+  <header>                                                        
     <a href="#" class="logo">Logo du site</a>
     
     <nav>
@@ -43,10 +43,10 @@
   </header>    
   <main>
     <h1>Siyar Ozan Külüg</h1>
-    <p>un etudiant en informatique</p>
+    <p>Un etudiant en informatique</p>
 
       <h2 id="experiences"> Mes expériences</h2>
-          <ul>
+          <ul>    
               <li>18 ans d’expérience en informatique</li>
               <li>Travaillé avec <em><strong>Elon Bezos</strong></em></li>
               <li>Travaillé chez Rockstar sur GTA 6 pendant environ 11 ans </li>
@@ -61,10 +61,11 @@
       <h2 id="formation">Ma formation</h2>
           <ul>
               <li>Scolarité obligatoire achevée en 2020</li>
+              <li>3 ans de lycée au total.</li>
           </ul>
-  </main>
+  </main>                                                                                                                                                            
   <footer>
-    &copy;2025 Siyar Ozan Külüg
+    &copy;2025 Siyar Ozan Külüg || <a href="mailto:siyarozan.kulug@divtec.ch">siyarozan.kulug@divtec.ch</a>
   </footer>
 </body>
 </html>
