--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 <body>
   <header>                                                        
-    <a href="#" class="logo">Logo du site</a>
+    <a href="img/homer-simpson-png-vaztn2xp5wb28jcy.png" class="logo">
+        <img src="img/homer-simpson-png-vaztn2xp5wb28jcy.png" alt= "Logo du site">
+    </a>
     
     <nav>
         <ul class="menu">
