corriger le code

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <!-- CSS de base -->
     <link rel="stylesheet" href="css/main.css"/>
     <!-- Favicon -->
-   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-   <link rel="manifest" href="site.webmanifest">
+   <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+   <link rel="manifest" href="./site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <header>                                                        
-    <a href="img/homer-simpson-png-vaztn2xp5wb28jcy.png" class="logo">
-        <img src="img/homer-simpson-png-vaztn2xp5wb28jcy.png" alt= "Logo du site">
+    <a href="./img/homer-simpson-png-vaztn2xp5wb28jcy.png" target="_blank" rel="noopener noreferrer" class="logo">
+          <img src="./img/homer-simpson-png-vaztn2xp5wb28jcy.png" alt="Photo de Siyar Ozan Külüg">
     </a>
     
     <nav>
