ajout class pour le css

--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
     <p>Un etudiant en informatique</p>
 
       <h2 id="experiences"> Mes expériences</h2>
-          <ul>    
+          <ul class="experience">    
               <li>18 ans d’expérience en informatique</li>
               <li>Travaillé avec <em><strong>Elon Bezos</strong></em></li>
               <li>Travaillé chez Rockstar sur GTA 6 pendant environ 11 ans </li>
           </ul>
 
       <h2 id="competences">Mes compétences</h2>
-          <ul>
+          <ul class="competences">
               <li>C++</li>
               <li>Expert en <strong>HTML</strong></li>
           </ul>
 
       <h2 id="formation">Ma formation</h2>
-          <ul>
+          <ul class="formation">
               <li>Scolarité obligatoire achevée en 2020</li>
               <li>3 ans de lycée au total.</li>
           </ul>
