Change nav element to include class 'menu'

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <img src="./img/homer-simpson-png-vaztn2xp5wb28jcy.png" alt="Photo de Siyar Ozan Külüg">
     </a>
     
-    <nav>
-        <ul class="menu">
+    <nav class="menu">
+        <ul>
             <li>
                 <a href="#experiences">Mon expérience</a>
             </li>
